# claude-lint

./: .gitignore  LICENSE  README.md  pyproject.toml
src/claude_lint/: __main__.py  cli.py  config.py  frontmatter.py  known.py  loader.py  models.py  reporters.py
src/claude_lint/rules/: __init__.py  cross_refs.py  frontmatter.py  hygiene.py  settings.py
tests/: test_cli.py  test_frontmatter_parser.py  test_layout_and_prefixes.py  test_parser_advanced.py  test_rules.py
tests/fixtures/bad/.claude/: settings.json
tests/fixtures/bad/.claude/agents/: stale.md
tests/fixtures/bad/.claude/memory/: MEMORY.md  orphan.md
tests/fixtures/bad/.claude/skills/bad-skill/: SKILL.md
tests/fixtures/good/.claude/: settings.json
tests/fixtures/good/.claude/agents/: helper.md
tests/fixtures/good/.claude/skills/good-skill/: SKILL.md
